k8s/namespaces/media/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
  labels:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/managed-by: flux
spec:
  selector:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/managed-by: flux
  ports:
    - port: 7878
      targetPort: 7878
      protocol: TCP
      name: radarr
  type: ClusterIP
