k8s/namespaces/media/radarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: media
  labels:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/managed-by: flux
spec:
  parentRefs:
    - name: nginx-gateway
      namespace: ingress
      sectionName: https
  hostnames:
    - "radarr.hosted.fail"
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.nginx.org
            kind: SnippetsFilter
            name: internal-whitelist
        - type: ExtensionRef
          extensionRef:
            group: gateway.nginx.org
            kind: SnippetsFilter
            name: tinyauth-forward
      backendRefs:
        - name: radarr
          port: 7878
