k8s/namespaces/media/radarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-radarr-https
  namespace: media
  labels:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/managed-by: flux
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.hosted.fail`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: ingress
        - name: authentik
          namespace: ingress
        - name: radarr-api-key
          namespace: ingress
      services:
        - name: radarr
          port: 7878
  tls: 
    secretName: hosted-fail-tls
